--- a/rebar.config
+++ b/rebar.config
@@ -20,7 +20,7 @@
 %%%----------------------------------------------------------------------
 
 {erl_opts, [debug_info, {src_dirs, ["asn1", "src"]},
-	    nowarn_export_all,
+	    	nowarn_export_all,
             {platform_define, "^(R|1|20|21|22)", 'USE_OLD_CRYPTO_HMAC'},
             {i, "include"}]}.
 
@@ -28,14 +28,14 @@
             {"CFLAGS", "$CFLAGS"}, {"LDFLAGS", "$LDFLAGS"}]}.
 
 {port_specs, [{"priv/lib/jid.so", ["c_src/jid.c"]},
-	      {"priv/lib/xmpp_uri.so", ["c_src/xmpp_uri.c"]},
-	      {"priv/lib/xmpp_lang.so", ["c_src/xmpp_lang.c"]}]}.
+	      	  {"priv/lib/xmpp_uri.so", ["c_src/xmpp_uri.c"]},
+	      	  {"priv/lib/xmpp_lang.so", ["c_src/xmpp_lang.c"]}]}.
 
 {deps, [{p1_utils, ".*", {git, "https://github.com/processone/p1_utils", {tag, "1.0.22"}}},
-	{fast_xml, ".*", {git, "https://github.com/processone/fast_xml", "c35922d8b1f2c562e9b77f43c7975200fdfb7275"}},
-	{fast_tls, ".*", {git, "https://github.com/processone/fast_tls", {tag, "1.1.12"}}},
-	{ezlib, ".*", {git, "https://github.com/processone/ezlib", {tag, "1.0.9"}}},
-	{idna, ".*", {git, "https://github.com/benoitc/erlang-idna", {tag, "6.0.0"}}},
+		{fast_xml, ".*", {git, "https://github.com/processone/fast_xml", {tag, "1.1.46"}}},
+		{fast_tls, ".*", {git, "https://github.com/processone/fast_tls", {tag, "1.1.12"}}},
+		{ezlib, ".*", {git, "https://github.com/processone/ezlib", {tag, "1.0.9"}}},
+		{idna, ".*", {git, "https://github.com/benoitc/erlang-idna", {tag, "6.0.0"}}},
         {stringprep, ".*", {git, "https://github.com/processone/stringprep", {tag, "1.0.25"}}}]}.
 
 {clean_files, ["c_src/jid.gcda", "c_src/jid.gcno"]}.
